fix collection image being squeezed on mobile

--- a/resources/assets/sass/v3/layout/content/package-single.scss
+++ b/resources/assets/sass/v3/layout/content/package-single.scss
@@ -85,6 +85,7 @@
                 max-width:100%;
                 max-height:75px;
                 height:auto;
+                width:auto;
                 margin-bottom:0;
             }
 
